fixed syntactic error

--- a/flex.html
+++ b/flex.html
@@ -13,7 +13,7 @@
   <body>
     <a class = "skip" href="#skip">Skip to Main Content</a>
     <header>
-      <img src="images/logo.png" alt="" id = "logo">
+      <img src="images/logo.png" alt="logo" id = "logo">
       <nav>
         <ul class="nav_links">
           <li class="nav_item"><a href="#skip">About</a></li>
@@ -60,16 +60,16 @@
 
       <h2 id = "gallery">Gallery</h2>
         <div class="gallery"> 
-          <img id="image1" src="images/sample.jpg" alt="" />
-          <img id="image2" src="images/logo.png" alt="" />
-          <img id="image3" src="images/sample.jpg" alt="" />
-          <img id="image4" src="images/logo.png" alt="" />
-          <img id="image5" src="images/sample.jpg" alt="" />
+          <img id="image1" src="images/sample.jpg" alt="sample" />
+          <img id="image2" src="images/logo.png" alt="logo" />
+          <img id="image3" src="images/sample.jpg" alt="sample" />
+          <img id="image4" src="images/logo.png" alt="logo" />
+          <img id="image5" src="images/sample.jpg" alt="sample" />
         </div>
       </main>
 
     <footer>
-      <p>University of Michigan School of Information <br/>
+      <p>University of Michigan School of Information<br/>
         &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>
     </footer>
   </body>
